[package]
name = "steam-cookie-searcher"
version = "0.0.3"
edition = "2024"
authors = ["xbl1e"]
repository = "https://github.com/xbl1e/steam-cookie-searcher"
description = "A terminal application to verify and extract Steam cookies using headless Chrome."
license = "MIT"

[dependencies]
crossterm = "0.29.0"
futures = "0.3.32"
ratatui = "0.30.1"
regex = "1.12.3"
reqwest = { version = "0.13.4", features = ["cookies", "rustls"] }
scraper = "0.27.0"
arboard = "3.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thirtyfour = "0.37.1"
tokio = { version = "1.52.3", features = ["full"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
zip = "8.6.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"
